# Sqlite3-NDK

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
Sqlite/: build.gradle
Sqlite/jni/: CMakeLists.txt  FileLog.cpp  FileLog.h  NativeByteBuffer.cpp  NativeByteBuffer.h  SqliteWrapper.cpp  jni.c
Sqlite/src/androidTest/java/com/thelqn/sqlite3/: ExampleInstrumentedTest.java
Sqlite/src/main/: AndroidManifest.xml
Sqlite/src/main/java/com/thelqn/sqlite3/: BuildVars.java  DispatchQueue.java  NativeByteBuffer.java  NativeLoader.java  SQLiteCursor.java  SQLiteDatabase.java
apk/: Sqlite-release.aar  app-release.apk  app.apk
app/: build.gradle  proguard-rules.pro
app/config/: release.keystore
app/jni/: BuffersStorage.cpp  CMakeLists.txt  Defines.h  FileLog.cpp  NativeByteBuffer.cpp  SqliteWrapper.cpp  jni.c
app/src/androidTest/java/com/thelqn/sqlite3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/thelqn/sample/: ApplicationLoader.java  MainActivity.java  MessagesStorage.java
app/src/main/java/com/thelqn/sample/model/: EventListener.java  Message.java
app/src/main/java/com/thelqn/sqlite3/: AbstractSerializedData.java  ApplicationLoader.java  BuildVars.java  MainActivity.java  MessagesStorage.java  NativeByteBuffer.java  SQLiteDatabase.java  SQLiteException.java  SQLitePreparedStatement.java
app/src/main/java/com/thelqn/sqlite3/model/: EventListener.java  Message.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/thelqn/sqlite3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
